--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4493,8 +4493,15 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background: black; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(black, black, #202020); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(black, black, #202020); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(black, black, #202020); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(black, black, #202020); /* Standard syntax */
+  border-color: #212121;
+}
+
+  
 }
 .navbar-default .navbar-brand {
   color: #777;
