--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -64,3 +64,11 @@ of those sections to manage the look and feel of the site. */
     text-align: center;
     background: #eee;
 }
+
+.footer-section {
+    height: 100%;
+    padding-top: 0px;
+    text-align: center;
+    background: #eee;
+}
+
